# ecl-android-test2

./: settings.gradle
app/: build.gradle
app/libs/ecl-android/include/ecl/: config-internal.h  config.h  configpre-int.h  configpre.h  ffi.h  gmp.h
app/libs/ecl-android/lib/ecl-20.4.24/: cmp.asd  cmp.fas  deflate.asd  deflate.fas  ecl-cdb.fas  ecl-curl.asd  ecl-quicklisp.asd  ql-minitar.asd  sb-bsd-sockets.asd  sb-bsd-sockets.fas  serve-event.fas
app/libs/ecl-android/share/info/: dir
app/libs/ecl-android/share/man/man1/: ecl.1
app/src/androidTest/java/com/example/ecl_android_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/lisp/etc/: trash.lisp  user.lisp
app/src/main/assets/lisp/lib/: TAGS  asdf.fas  build-stamp  ecl-cdb.asd  ecl-curl.fas  ecl-help.asd  ecl-help.fas  ecl-quicklisp.fas  help.doc  package-locks.asd  package-locks.fas  prebuilt-asdf.asd  ql-minitar.fas  serve-event.asd  sockets.asd  sockets.fas
app/src/main/cpp/: CMakeLists.txt  EmbeddedCommonLisp.c  EmbeddedCommonLisp.h  ecl_boot.c  ecl_boot.h  logging.c  logging.h
app/src/main/java/com/example/ecl_android_test/: EmbeddedCommonLisp.java  HelloEclActivity.java  NativeRunnable.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ecl_android_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
